# ContainerGym

./: README.md  pyproject.toml  requirements.txt
bunkergym/: LICENSE  env.py  reward.py
bunkergym/configs/: 11bunkers_2presses_2.json  1bunker_2press.json  5bunkers_2presses_4.json  list_constants_example_2.json
bunkergym/experiments/: callbacks.py  evaluate_agent.py  train_agent.py
bunkergym/models/: linear_press_models.py
containergym/: env.py  reward.py
containergym/configs/: 11containers_11presses_5.json  11containers_11presses_6.json  11containers_2presses_3.json  11containers_2presses_4.json  1bunker_1press.json  1container_1press.json  1container_1press_2_C1-20.json  1container_1press_2_C1-30.json  1container_1press_2_C1-40.json  1container_1press_2_C1-60.json  1container_1press_2_C1-70.json  1container_1press_2_C1-80.json  1container_1press_2_C2-10.json  1container_1press_2_C2-20.json  1container_1press_2_C2-60.json  1container_1press_2_C2-70.json  1container_1press_2_C2-80.json  1container_1press_C1-20.json  1container_1press_C1-30.json  1container_1press_C1-40.json  1container_1press_C1-60.json  1container_1press_C1-70.json  1container_1press_C1-80.json  1container_1press_C2-10.json  1container_1press_C2-20.json  1container_1press_C2-60.json  1container_1press_C2-70.json  1container_1press_C2-80.json  1container_2press.json  2bunkers_2presses.json  5containers_2presses_2.json  5containers_2presses_3.json  5containers_2presses_4.json  5containers_5presses_2.json  README.md  (+3 more)
experiments/: ecdf_rewards.py  reproduce_results_paper.py  rule_based_agent.py
(+63 files in other folders)
