[tool.poetry]
name = "bunkergym"
version = "1.3.0"
description = "Real world RL benchmark for sequential decision making problems"
authors = ["abhijeet <p.abhijeet777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
gym = "0.23.1"
stable-baselines3 = "1.2.0"
tqdm = "4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
